# Graphics_course_renderer

./: CMakeLists.txt  README.md  main.cpp
lib/: Photon.hpp  PointLight.hpp  Ppm.hpp  Ray.hpp  Scene.hpp  tonemapper.hpp
lib/aux/: Channel.hpp  ThreadSafeCounter.hpp  aux.hpp  benchmarking.cpp  benchmarking.hpp
lib/camera/: camera.cpp  camera.hpp
lib/figures/: Bounds3d.hpp  Cone.hpp  ConstructiveSolidDifference.hpp  ConstructiveSolidIntersection.hpp  ConstructiveSolidUnion.hpp  Cylinder.hpp  Disk.hpp  Ellipsoid.hpp  Figure.hpp  HitRegister.hpp  ObjMod.hpp  Plane.hpp  Sphere.hpp  Texture.hpp  TransformedFigure.hpp  Triangle.hpp
lib/figures/accelerators/: BVH.hpp  ConcurrentBVH.hpp
lib/math/: Direction.hpp  Point.hpp  TransformationMatrix.hpp  Vector3d.hpp
lib/pathtracing/: pathtracing.hpp
lib/photonmapping/: photonmapping.hpp  photonmapping_kdtree.hpp
renderer/: renderer.hpp
renderer/pathtracer/: multithreaded_pathtracer.hpp  multithreaded_pathtracer_bvh.hpp
renderer/photonmapper/: multithreaded_photonmapper.hpp  multithreaded_photonmapper_bvh.hpp
